--- a/compton.conf
+++ b/compton.conf
@@ -3,23 +3,14 @@
 
 # Backend:
 
+# Set rendering backend:
 backend="xrender";
 
 # Opacity:
 
-# Opacity of inactive windows:
+# Translucent inactive windows:
 inactive-opacity=0.9;
-
-# Shadow:
-
-# Enable shadow:
-#shadow=true;
-# Zero shadow behind window:
-#clear-shadow=true;
-# Set shadow radius:
-#shadow-radius=4;
-# Set shadow position:
-#shadow-offset-x=-6;
-#shadow-offset-y=-6;
-# Set shadow opacity:
-#shadow-opacity=0.8;
+# Translucent borders:
+frame-opacity=0.8;
+# Dimmed inactive windows:
+inactive-dim=0.1;
