Update neofetch configuration

--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -278,7 +278,7 @@ gpu_type="all"
 # Example:
 # on:  '1920x1080 @ 60Hz'
 # off: '1920x1080'
-refresh_rate="off"
+refresh_rate="on"
 
 
 # Gtk Theme / Icons / Font
