Update alacritty colours

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -32,4 +32,4 @@ colors:
         blue: '#82AAFF'
         magenta: '#C792EA'
         cyan: '#89DDFF'
-        white: '#D8DEE9'
+        white: '#8F93A2'
