--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -125,8 +125,7 @@
     "files.trimTrailingWhitespace": true,
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": true,
-    "python.pythonPath": "C:\\Users\\Ash\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
-    "terminal.integrated.shell.windows": "C:\\Program Files\\Powershell\\7\\pwsh.exe",
+    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\wsl.exe",
     "window.openFilesInNewWindow": "off",
     "window.openFoldersInNewWindow": "on",
     "window.zoomLevel": 1,
